# docs/swagger.json
@@ -63,6 +63,39 @@
                 }
             }
         },
+        "/mul": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Multiply service",
+                "operationId": "5",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "first number",
+                        "name": "num1",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "second number",
+                        "name": "num2",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.MulResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/sub": {
             "post": {
                 "produces": [
@@ -137,6 +170,14 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "main.MulResponse": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "integer"
                 }
             }
         },
